--- a/vermontcomplexsystems-foundation.rw8/Pages/07-Events-0026-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/07-Events-0026-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-01-17T12:49:16Z</date>
+						<date>2023-01-27T12:52:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1104,8 +1104,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G2cK2evqGyr9
-								J7f0xSXu6w==
+								DiH1HjKCPMZl
+								Exxh/Liw8w==
 								</data>
 								<key>Size</key>
 								<integer>543107</integer>
@@ -1114,8 +1114,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KyFsmPEtkf1P
-								J3qQnWHwLA==
+								h6CWCuruGesp
+								D3yjuShxEg==
 								</data>
 								<key>Size</key>
 								<integer>29624</integer>
@@ -1124,11 +1124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GagIQx8t02pu
-								+zrYVs7yVw==
+								13ABk2JTgRIL
+								FAkmB8+A+w==
 								</data>
 								<key>Size</key>
-								<integer>370394</integer>
+								<integer>370091</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
