--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Research/ChildPages/04-Publications/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Research/ChildPages/04-Publications/Data/Contents.plist
@@ -13,52 +13,82 @@
 				<string>6300</string>
 				<key>markedImages</key>
 				<array>
-					<string>FD389FA5-B600-4DB3-8A4A-3289C88C2096.png</string>
-					<string>A59ED5D6-B189-4EC8-85FC-31854D7A9DD5.png</string>
-					<string>8E329F4D-9315-4653-9316-ACE3F0BA7EBC.png</string>
-					<string>3EFF28DA-B88C-4BE3-8106-D3B7C78CA3BF.png</string>
-					<string>9398B3FF-1B48-4B9C-83EB-AC87F3F22A91.png</string>
-					<string>46F67BB4-BCCF-4D44-B5BC-C7FF3B43AA28.png</string>
-					<string>7E488901-60FC-465D-92D2-B49D917F4A9B.png</string>
-					<string>DFA5AFB1-A82E-43A3-9B87-FC6F9161A3E3.png</string>
-					<string>6AF4F66B-48C2-4591-9FEC-CC6AFAF265D8.png</string>
-					<string>759B6C51-18A9-4CC0-BF69-A0E98DFF52F0.png</string>
-					<string>24D8FEB0-32EE-4DE2-B07D-807F6352ED1C.png</string>
-					<string>812D29CF-FA01-48E4-A365-FE14CFFA262A.png</string>
-					<string>FD3022AC-2118-42B7-9E3E-9F66E14E5B33.png</string>
-					<string>16577EDF-CEA4-40CC-9703-03A05BD0279B.png</string>
-					<string>9AA3771A-78A4-45EB-A734-5FF21DDB25D6.png</string>
-					<string>B41F4CC2-F11B-40F7-A7A7-07D95F93C940.png</string>
+					<string>FEFCB4D8-D335-4887-B8F2-49D59D956B0C.jpeg</string>
+					<string>4D267D51-8AC3-470B-BC07-ADBBD8E77749.jpeg</string>
+					<string>4CAF9111-5B27-4B3F-86D9-81D4D825CEFC.jpeg</string>
+					<string>F0E0EFD4-801C-401E-B4DE-EBD64F653714.jpg</string>
+					<string>85378E5C-1679-4C1C-9798-44291C7EA170.jpeg</string>
+					<string>3B955A40-470C-4683-B702-9848529758FC.jpeg</string>
+					<string>DB209A0B-9299-4D50-AC9F-4C6BB28FEBAC.png</string>
+					<string>904CB2C9-0F11-4E43-8DE9-E1D076BA9EAD.jpeg</string>
 					<string>E97F2417-BD68-448C-91B7-0BE97DC867F8.png</string>
-					<string>3784082D-F31E-46F8-93A8-3F63FBE5B8D8.png</string>
-					<string>097FB8F5-4B66-4248-B7DB-A000DE0398F9.tif</string>
-					<string>77FEAE35-A1D0-4335-9335-7E38B0B1E4A5.png</string>
-					<string>D44FCF78-9801-4C5C-A36F-9E89A450AD6D.png</string>
-					<string>28938BE0-8C9B-4E8E-8A75-EB19433E1D2F.png</string>
-					<string>6572FA29-82D3-43C6-8558-888692800D86.png</string>
-					<string>D08EDEAE-EEEB-4589-9282-9C456ECB9595.png</string>
-					<string>D1A6EAF2-A223-4563-8887-DC4AB397A346.png</string>
-					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
-					<string>58B69B8A-FC24-4702-A580-3FC85EC3F96C.png</string>
-					<string>4276501D-F29A-4001-83A1-598DC90478CE.png</string>
-					<string>8DF59B2F-0DC0-4F45-852F-65A747EF1407.png</string>
-					<string>5317EA6B-43B2-4526-B72E-F77BB75EE040.png</string>
-					<string>40402C9D-BFDF-4D43-8221-1A37AFE2E491.png</string>
-					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
-					<string>814D30A1-E145-4E51-B6E9-D316539E0DE5.png</string>
-					<string>B6278650-935D-40B1-8D61-A286FACD558B.png</string>
+					<string>B8A1951F-2894-46EE-A7A6-B7AC2B25D7AB.jpg</string>
+					<string>9AA3771A-78A4-45EB-A734-5FF21DDB25D6.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
-					<string>56C9D2BB-B9F6-4169-94F8-82EB40352053.png</string>
-					<string>AAA05EAF-9D42-4189-B490-2904F26106E4.png</string>
+					<string>4D82F273-30D4-43BE-9408-DEC0C17976AD.jpg</string>
+					<string>A5D5C7B5-A894-4B85-81EB-BE2B5B231C3A.jpeg</string>
+					<string>C1C3C131-9B15-49E4-85AB-B24B18F54CE4.jpeg</string>
+					<string>88772E34-3626-4E83-8B68-B76D7CFD280D.jpeg</string>
+					<string>980835AD-6977-43C9-B70D-18CCA1C75470.jpg</string>
+					<string>23FE2E2E-CAAA-4911-AD6C-6607F1BA384F.jpeg</string>
+					<string>D25A93E9-D664-4A79-B133-A3E8DDE86047.jpg</string>
+					<string>77B73048-FCBE-4344-8F08-2855692E793B.jpg</string>
+					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>6AD6ED14-3F3F-4433-AA26-C7096E9F5554.JPG</string>
+					<string>824DB919-9A6D-46C5-B45A-D7BD20F8A947.png</string>
+					<string>8FCCB529-6D0A-4EFD-8BC7-E98F04E1CFE8.png</string>
+					<string>72285872-E20D-40B5-B598-C381388669BD.png</string>
+					<string>3753C1ED-81C9-4B9B-BEB7-D5624ED4F8A8.jpg</string>
+					<string>097FB8F5-4B66-4248-B7DB-A000DE0398F9.tif</string>
+					<string>F03FA060-6CBB-48E5-BF43-D598CD938903.jpeg</string>
+					<string>456042FE-60F4-4921-A4EC-7DB7E6ADF61B.JPG</string>
+					<string>5BF30921-A671-4CDB-97A7-8BC0411EACE0.jpg</string>
+					<string>2D2C7882-4070-45FF-B2A2-E8EBA0776854.jpg</string>
+					<string>3A11B0C1-9DAE-44AC-B3BA-AC20129F6A6B.png</string>
+					<string>CA62E549-36E9-429D-813D-F52E22EE4E61.jpg</string>
+					<string>0D23015F-A18C-4669-8E4F-02FED6B490C4.jpeg</string>
+					<string>97610C34-CA0D-4A40-81E3-935A5198EB15.png</string>
+					<string>E803AE13-A4C7-4755-8A04-1C5A56B26D45.jpg</string>
+					<string>3D22F3F8-774D-48F3-BA8C-E01132B08199.jpeg</string>
+					<string>5D61BD56-6CDB-4CBB-B59E-06361F9E61E3.jpg</string>
+					<string>5259EB3C-8F9B-49B0-98B7-6F3619CEDC51.png</string>
+					<string>5788FCC3-5087-47E8-81B3-A2B2FECA0ABE.jpg</string>
+					<string>F2416E23-8774-41A8-9C6A-A0C94F645FEC.jpeg</string>
+					<string>FE232A91-069A-4911-B5C7-A83952494984.jpeg</string>
+					<string>0EA7C9B3-5BA7-4AA9-8173-A0053C3124AD.jpg</string>
+					<string>DDBD7F79-2153-4D98-B55D-FBC2B1CB73ED.jpeg</string>
+					<string>074DB506-DD6C-46B2-8A8A-B2CFD1CA4CF2.png</string>
+					<string>A9B228A4-BEE7-45F6-88F9-261598FA9098.jpeg</string>
+					<string>EAA153DC-0A6A-442E-BF56-2E068EFB541C.jpg</string>
+					<string>B7470981-AB76-4C45-98D2-C605358223F8.jpeg</string>
+					<string>5D84A60A-E58F-40A5-8017-0CA9EDC71DB3.png</string>
+					<string>636ED7CB-7626-4238-B88F-2D6E6E0CE773.jpg</string>
+					<string>DBF9EE94-2BBC-48F7-A4C1-65B3DBA8D3D4.jpg</string>
+					<string>D105C8B9-5C12-4D9A-B063-06A7AB5C0555.jpeg</string>
+					<string>9D1F9AE0-6816-4211-BB4C-3ED69B79CAFD.jpeg</string>
+					<string>AD1DD40F-D2AB-49B2-B02D-C7BDFA7D91C5.png</string>
+					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
+					<string>BA97414C-3F7F-4AA4-A7FE-819D687C71F8.jpg</string>
+					<string>893502BA-BCD3-480E-B6FC-2BAD8B7A0C4F.jpg</string>
+					<string>C69624CF-0442-44EB-A38D-1FE418C6CC31.jpg</string>
+					<string>FB2ED7F3-BD34-458F-9541-33A4A28F7DB6.png</string>
+					<string>564025D5-0062-4CCB-BEF7-4FB06B3FD766.jpg</string>
+					<string>0F3986A7-8A92-4B24-872F-EF0775EBF014.jpg</string>
+					<string>ECCD3F1A-3BF0-4C14-8E42-742AD3ED770A.jpg</string>
+					<string>2B2723F5-C4B3-42C6-BBD8-C7A7E9989A98.jpg</string>
+					<string>17E14FC6-211A-4C35-BEB1-36B9703E520C.jpg</string>
+					<string>89BB3204-CFF3-4411-A25C-4DFB8632E05D.jpeg</string>
+					<string>EB709EEC-D4EE-481D-AF8C-A379A29DD612.jpg</string>
+					<string>1EEF836A-66E9-4929-8E20-E273DF71BC6E.jpeg</string>
+					<string>ED0CB92F-FFF8-411E-97D1-AD86C92D334A.png</string>
+					<string>29EF119E-8645-49CC-84DB-4DCF2F02CEF1.png</string>
+					<string>E60A35D9-6F04-4DBF-8694-277C91A35AE7.JPG</string>
+					<string>4D8E34CF-B756-4351-A45C-19E462C4B2BB.png</string>
 					<string>921BAA7E-FDF7-4456-B843-2CED84DAF2D8.png</string>
-					<string>CF9893E3-59CD-4BE6-8702-0BD6471A502E.png</string>
-					<string>39B8ED38-E9A1-4DAB-B7B9-8B4B460879D4.png</string>
-					<string>A5D65C1F-EE68-411B-93B8-D153EA25F7E2.png</string>
-					<string>D75A030B-8188-4D24-BFC4-2F7ECDBC4129.png</string>
-					<string>FC8D0313-A44C-4AC6-8B38-60ADAB9726D7.png</string>
+					<string>A5988491-8ACF-4BDE-9385-42F00D75F820.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 23-01-23 #161910B61</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 23-01-27 #075201E25</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
@@ -113,7 +143,7 @@
 				DwQPBQ8GDwcPCA8JDwoPCw8MDw0PDg8PDxAPEQ8SDxMP
 				FA8VDxYPFw8YDxkPGg8bDysPLA8tDy4PNQ89Dz4PRQ9N
 				D04PTw9UD1UPVg9fD2IPZw9wD3MPdg93D3gPeQ96D3sP
-				fA99D4QPhQ+OD5EPkg+ZD6EPpA+lD6YPqw+sD60PsA+3
+				fA99D4QPhQ+OD5EPkg+ZD6EPpA+lD6YPqQ+uD68PsA+3
 				D+8P8g/zD/QP+Q/8EAMQCRAMEBMQGhAhECgQLBAvEDAQ
 				aBBrEGwQbRByEHUQfBCCEIUQjBCTEJoQoRClEKgQqRDh
 				EOQQ5RDmEOsQ7hD1EPsQ/hEFEQwRExEaER4RIREiEVER
@@ -1187,12 +1217,12 @@
 				AvOBAvSBAvWBAvaBAveBAviBAvmBAvqBAvuAfYEC/K8Q
 				Ng6wCQcAOQ6zDrQAOw62DrcAOwA7AsgAUg68ApsAOw6/
 				ADkAOQK3DsMOxAE/DsYAOw7IDskOyg7LDswOzQ7OADkO
-				0AA7DtIO0wA5ADkAOQ7XDtgO2QA7ADkAOQ7dDt4AOwBa
-				ADkAOQ7jDuQAOYEC/YEB84AGgQL+gQMCgAWBAwSBAwWA
+				0AA7DtIO0wA5ADkAOQ7XDtgO2QA7ADkAOQ7dDt4AOwA5
+				AFoAOQA5DuQO5YEC/YEB84AGgQL+gQMCgAWBAwSBAwWA
 				BYAFgPGAC4EDB4C2gAWBAwiABoAGgNKBAwmBAwuALoED
 				DIAFgQMPgQMSgQMTgQMUgQMVgQMWgQMXgAaBAxiABYED
 				GYEDG4AGgAaABoEDHYEDHoEDIIAFgAaABoEDIYEDIoAF
-				gAmABoAGgQMjgQMmgAaAF1htZW51Rm9udFtmaXhlZFNo
+				gAaACYAGgAaBAyOBAySAF1htZW51Rm9udFtmaXhlZFNo
 				YWRvd1poYWxmSGVpZ2h0WWxvZ29TbWFsbF8QD2hpZGVU
 				aXRsZU1vYmlsZVVhbGlnbllsb2dvTGFyZ2Vac2hvd1Bh
 				cmVudFhzaG93TG9nb1h0aXRsZVRhZ1huYXZJbmRleFR6
@@ -1207,9 +1237,9 @@
 				YWtwb2ludEN1c3RvbVpsb2dvTWVkaXVtWXRleHRDb2xv
 				cl1mdWxsV2lkdGhNZW51V2NvbnRhaW5cY3VzdG9tU2l6
 				aW5nWmJyZWFrcG9pbnRWc2xvZ2FuXxAQaGlkZVNsb2dh
-				bk1vYmlsZVtmaXhlZE9mZnNldFt6b25lRGl2aWRlcl8Q
-				EHN1Ym1lbnVJbmRpY2F0b3JYZm9udFNpemVfEA9jb2xs
-				YXBzZUhlYWRpbmdfEBBmb250LWZhbWlseS10ZXh00wCx
+				bk1vYmlsZV8QD2NvbGxhcHNlSGVhZGluZ1tmaXhlZE9m
+				ZnNldFt6b25lRGl2aWRlcl8QEHN1Ym1lbnVJbmRpY2F0
+				b3JYZm9udFNpemVfEBBmb250LWZhbWlseS10ZXh00wCx
 				AHcALA8cDyMAtKYJHgkfCSAJIQkiCSOBAfeBAfiBAfmB
 				AfqBAfuBAfymDyQPJQA7DycJKQkqgQL/gQMAgAWBAwGB
 				Af6BAf+AF1loZWlnaHRbMF1aaGFsZkhlaWdodBAC1wOe
@@ -1238,9 +1268,9 @@
 				0wCxAHcALA+aD50AtKIDrAOtgNCA0aICtwK3gNKA0oAX
 				0wCAAIEALA+iAHUAg08QJzAuMzQ1MDk4MDM5MiAwLjM0
 				NTA5ODAzOTIgMC4zNDkwMTk2MDc4AIAPWDYyLjU2M2Vt
-				VlNsb2dhbtIAdwAsD6cAwqIPqA+pgQMkgQMlgCkjP+oA
-				AAAAAAAjP/EAAAAAAADTAIAAgQAsD64AdQCDSjAgMCAw
-				IDAuNACAD9IAdwAsD7EAwqQPsg+zD7QPtYEDKIEDOIED
+				VlNsb2dhbtMAgACBACwPpwB1AINKMCAwIDAgMC40AIAP
+				0gB3ACwPqgDCog+rD6yBAyWBAyaAKSM/6gAAAAAAACM/
+				8QAAAAAAANIAdwAsD7EAwqQPsg+zD7QPtYEDKIEDOIED
 				SIEDWIAp3xA3BYMAEQAqBYQALgAgACkAMAWFACEFhgAQ
 				ACgAMwWHABMAHgAUADUADwAYBYgAMgA0BYkAGQAXBYoA
 				FgA3ACcAIwAdACQANgAaBYsALAAtABwFjAASBY0FjgAb
@@ -5690,9 +5720,9 @@
 				gAmACYAJgA3SAHcALD7eAHukAFoAWgBaAFqACYAJgAmA
 				CYAN0gB3ACw+5QB7pABaAFoAWgBagAmACYAJgAmADdMA
 				sQB3ACw+7D8GALSvEBk+7RP0AlYdyQOsPvI+8z70PvU+
-				9j73Pvg++T76Pvs+/D79Dqw+/z8APwE/Aj8DPwQ/BYEK
+				9j73Pvg++T76Pvs+/D79Dq4+/z8APwE/Aj8DPwQ/BYEK
 				jYEDxoBxgQVdgNCBCo6BCo+BCpCBCpGBCpKBCpOBCpSB
-				CpWBCpaBCpeBCpiBCpmBAvuBCpqBCpuBCpyBCp2BCp6B
+				CpWBCpaBCpeBCpiBCpmBAvyBCpqBCpuBCpyBCp2BCp6B
 				Cp+BCqCvEBk/Bz8IPwkAOQA7PwwCtwK3Pw8/ED8RADk/
 				Ez8UADkAOT8XPxgAOT8aFAYO1z8dArk/H4EKoYEKo4EK
 				pYAGgAWBCqaA0oDSgQqngQqogQqqgAaBCquBCqyABoAG
@@ -5762,9 +5792,9 @@
 				QEYAe6QAWgBaAFoAWoAJgAmACYAJgA3SAHcALEBNAHuk
 				AFoAWgBaAFqACYAJgAmACYAN0gB3ACxAVAB7pABaAFoA
 				WgBagAmACYAJgAmADdMAsQB3ACxAW0B1ALSvEBlAXBP0
-				AlYdyQOsPvI+80BjQGRAZUBmPvhAaD76QGo+/D79Dqw+
+				AlYdyQOsPvI+80BjQGRAZUBmPvhAaD76QGo+/D79Dq4+
 				/0BvPwFAcUByQHM/BYEK04EDxoBxgQVdgNCBCo6BCo+B
-				CtSBCtWBCtaBCteBCpSBCtiBCpaBCtmBCpiBCpmBAvuB
+				CtSBCtWBCtaBCteBCpSBCtiBCpaBCtmBCpiBCpmBAvyB
 				CpqBCtqBCpyBCtuBCtyBCt2BCqCvEBlAdkB3QHgAOQA7
 				PwwCtwK3Pw9Afz8RADk/Ez8UADkAOT8XPxgAOUCJFAYO
 				1z8dE/RAjoEK3oEK4IEK44AGgAWBCqaA0oDSgQqngQrk
@@ -5832,9 +5862,9 @@
 				CYAJgAmADdIAdwAsQaoAe6QAWgBaAFoAWoAJgAmACYAJ
 				gA3SAHcALEGxAHukAFoAWgBaAFqACYAJgAmACYAN0wCx
 				AHcALEG4QdIAtK8QGUG5E/QCVh3JA6w+8j7zQcBBwUHC
-				QcM++EHFPvpBxz78Pv0OrD7/Qcw/AUHOQc9B0D8FgQsJ
+				QcM++EHFPvpBxz78Pv0Orj7/Qcw/AUHOQc9B0D8FgQsJ
 				gQPGgHGBBV2A0IEKjoEKj4ELCoELC4ELDIELDYEKlIEL
-				DoEKloELD4EKmIEKmYEC+4EKmoELEIEKnIELEYELEoEL
+				DoEKloELD4EKmIEKmYEC/IEKmoELEIEKnIELEYELEoEL
 				E4EKoK8QGUHTQdRB1QA5ADs/DAK3Arc/D0HcPxEAOT8T
 				PxQAOQA5PxdB5AA5QeYUBg7XPx0T9EHrgQsUgQsWgQsZ
 				gAaABYEKpoDSgNKBCqeBCxqBCqqABoEKq4EKrIAGgAaB
@@ -5900,9 +5930,9 @@
 				AFoAWoAJgAmACYAJgA3SAHcALEMHAHukAFoAWgBaAFqA
 				CYAJgAmACYAN0gB3ACxDDgB7pABaAFoAWgBagAmACYAJ
 				gAmADdMAsQB3ACxDFUMvALSvEBk+7RP0AlYdyQOsPvI+
-				8z70PvU+9j73Pvg++T76Pvs+/D79Dqw+/z8APwE/Aj8D
+				8z70PvU+9j73Pvg++T76Pvs+/D79Dq4+/z8APwE/Aj8D
 				PwQ/BYEKjYEDxoBxgQVdgNCBCo6BCo+BCpCBCpGBCpKB
-				CpOBCpSBCpWBCpaBCpeBCpiBCpmBAvuBCpqBCpuBCpyB
+				CpOBCpSBCpWBCpaBCpeBCpiBCpmBAvyBCpqBCpuBCpyB
 				Cp2BCp6BCp+BCqCvEBlDMEMxQzIAOQA7PwwCtwK3Pw9D
 				OT8RADk/Ez8UADkAOT8XQeQAOT8aFAYO1z8dE/RDSIEL
 				P4ELQYELRoAGgAWBCqaA0oDSgQqngQtHgQqqgAaBCquB
@@ -7706,14 +7736,14 @@
 				hQAAkYcAAJGKAACRjAAAkY8AAJGSAACRlQAAkZgAAJGb
 				AACRngAAkaEAAJGjAACRpgAAkagAAJGrAACRrgAAkbAA
 				AJGyAACRtAAAkbcAAJG6AACRvQAAkb8AAJHBAACRwwAA
-				kcYAAJHJAACRywAAkc0AAJHPAACR0QAAkdQAAJHXAACR
+				kcYAAJHJAACRywAAkc0AAJHPAACR0QAAkdMAAJHWAACR
 				2QAAkdsAAJHkAACR8AAAkfsAAJIFAACSFwAAkh0AAJIn
 				AACSMgAAkjsAAJJEAACSTQAAklIAAJJbAACSaAAAkm4A
 				AJJ5AACSgQAAkoYAAJKLAACSlgAAkqEAAJKpAACSswAA
 				ksUAAJLRAACS2wAAkuUAAJLrAACS+QAAkwQAAJMOAACT
 				GAAAkx8AAJMrAACTNwAAk0YAAJNRAACTZAAAk28AAJN5
-				AACThwAAk48AAJOcAACTpwAAk64AAJPBAACTzQAAk9kA
-				AJPsAACT9QAAlAcAAJQaAACUJwAAlDQAAJQ3AACUOgAA
+				AACThwAAk48AAJOcAACTpwAAk64AAJPBAACT0wAAk98A
+				AJPrAACT/gAAlAcAAJQaAACUJwAAlDQAAJQ3AACUOgAA
 				lD0AAJRAAACUQwAAlEYAAJRTAACUVgAAlFkAAJRbAACU
 				XgAAlGEAAJRkAACUZgAAlHAAAJR7AACUfQAAlJoAAJSc
 				AACUngAAlJ8AAJSiAACUpAAAlKYAAJSzAACUuAAAlLoA
@@ -7730,8 +7760,8 @@
 				AAAAlwIAAJcEAACXBgAAlxMAAJcoAACXKgAAly0AAJdK
 				AACXTAAAl04AAJdPAACXUgAAl1QAAJdWAACXYwAAl2gA
 				AJdqAACXbAAAl3EAAJdzAACXdQAAl3cAAJeEAACXrgAA
-				l7AAAJe5AACXwAAAl8kAAJfOAACX0QAAl9QAAJfWAACX
-				3wAAl+gAAJf1AACYAAAAmAIAAJgLAACYFAAAmBcAAJga
+				l7AAAJe5AACXwAAAl80AAJfYAACX2gAAl+MAAJfoAACX
+				6wAAl+4AAJfwAACX+QAAmAIAAJgLAACYFAAAmBcAAJga
 				AACYHQAAmCAAAJgiAACZAQAAmQIAAJkEAACZBwAAmQoA
 				AJkMAACZDwAAmREAAJkTAACZFAAAmRcAAJkaAACZHAAA
 				mR4AAJkgAACZIwAAmSUAAJknAACZKgAAmSwAAJkuAACZ
