--- a/vermontcomplexsystems-foundation.rw8/Pages/07-Events-0026-Programs/ChildPages/1-Complex-Networks-Winter-Workshop/ChildPages/2-Details/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/07-Events-0026-Programs/ChildPages/1-Complex-Networks-Winter-Workshop/ChildPages/2-Details/Data/Contents.plist
@@ -13,52 +13,82 @@
 				<string>6300</string>
 				<key>markedImages</key>
 				<array>
-					<string>FD389FA5-B600-4DB3-8A4A-3289C88C2096.png</string>
-					<string>A59ED5D6-B189-4EC8-85FC-31854D7A9DD5.png</string>
-					<string>8E329F4D-9315-4653-9316-ACE3F0BA7EBC.png</string>
-					<string>3EFF28DA-B88C-4BE3-8106-D3B7C78CA3BF.png</string>
-					<string>9398B3FF-1B48-4B9C-83EB-AC87F3F22A91.png</string>
-					<string>46F67BB4-BCCF-4D44-B5BC-C7FF3B43AA28.png</string>
-					<string>7E488901-60FC-465D-92D2-B49D917F4A9B.png</string>
-					<string>DFA5AFB1-A82E-43A3-9B87-FC6F9161A3E3.png</string>
-					<string>6AF4F66B-48C2-4591-9FEC-CC6AFAF265D8.png</string>
-					<string>759B6C51-18A9-4CC0-BF69-A0E98DFF52F0.png</string>
-					<string>24D8FEB0-32EE-4DE2-B07D-807F6352ED1C.png</string>
-					<string>812D29CF-FA01-48E4-A365-FE14CFFA262A.png</string>
-					<string>FD3022AC-2118-42B7-9E3E-9F66E14E5B33.png</string>
-					<string>16577EDF-CEA4-40CC-9703-03A05BD0279B.png</string>
-					<string>9AA3771A-78A4-45EB-A734-5FF21DDB25D6.png</string>
-					<string>B41F4CC2-F11B-40F7-A7A7-07D95F93C940.png</string>
+					<string>FEFCB4D8-D335-4887-B8F2-49D59D956B0C.jpeg</string>
+					<string>4D267D51-8AC3-470B-BC07-ADBBD8E77749.jpeg</string>
+					<string>4CAF9111-5B27-4B3F-86D9-81D4D825CEFC.jpeg</string>
+					<string>F0E0EFD4-801C-401E-B4DE-EBD64F653714.jpg</string>
+					<string>85378E5C-1679-4C1C-9798-44291C7EA170.jpeg</string>
+					<string>3B955A40-470C-4683-B702-9848529758FC.jpeg</string>
+					<string>DB209A0B-9299-4D50-AC9F-4C6BB28FEBAC.png</string>
+					<string>904CB2C9-0F11-4E43-8DE9-E1D076BA9EAD.jpeg</string>
 					<string>E97F2417-BD68-448C-91B7-0BE97DC867F8.png</string>
-					<string>3784082D-F31E-46F8-93A8-3F63FBE5B8D8.png</string>
-					<string>097FB8F5-4B66-4248-B7DB-A000DE0398F9.tif</string>
-					<string>77FEAE35-A1D0-4335-9335-7E38B0B1E4A5.png</string>
-					<string>D44FCF78-9801-4C5C-A36F-9E89A450AD6D.png</string>
-					<string>28938BE0-8C9B-4E8E-8A75-EB19433E1D2F.png</string>
-					<string>6572FA29-82D3-43C6-8558-888692800D86.png</string>
-					<string>D08EDEAE-EEEB-4589-9282-9C456ECB9595.png</string>
-					<string>D1A6EAF2-A223-4563-8887-DC4AB397A346.png</string>
-					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
-					<string>58B69B8A-FC24-4702-A580-3FC85EC3F96C.png</string>
-					<string>4276501D-F29A-4001-83A1-598DC90478CE.png</string>
-					<string>8DF59B2F-0DC0-4F45-852F-65A747EF1407.png</string>
-					<string>5317EA6B-43B2-4526-B72E-F77BB75EE040.png</string>
-					<string>40402C9D-BFDF-4D43-8221-1A37AFE2E491.png</string>
-					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
-					<string>814D30A1-E145-4E51-B6E9-D316539E0DE5.png</string>
-					<string>B6278650-935D-40B1-8D61-A286FACD558B.png</string>
+					<string>B8A1951F-2894-46EE-A7A6-B7AC2B25D7AB.jpg</string>
+					<string>9AA3771A-78A4-45EB-A734-5FF21DDB25D6.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
-					<string>56C9D2BB-B9F6-4169-94F8-82EB40352053.png</string>
-					<string>AAA05EAF-9D42-4189-B490-2904F26106E4.png</string>
+					<string>4D82F273-30D4-43BE-9408-DEC0C17976AD.jpg</string>
+					<string>A5D5C7B5-A894-4B85-81EB-BE2B5B231C3A.jpeg</string>
+					<string>C1C3C131-9B15-49E4-85AB-B24B18F54CE4.jpeg</string>
+					<string>88772E34-3626-4E83-8B68-B76D7CFD280D.jpeg</string>
+					<string>980835AD-6977-43C9-B70D-18CCA1C75470.jpg</string>
+					<string>23FE2E2E-CAAA-4911-AD6C-6607F1BA384F.jpeg</string>
+					<string>D25A93E9-D664-4A79-B133-A3E8DDE86047.jpg</string>
+					<string>77B73048-FCBE-4344-8F08-2855692E793B.jpg</string>
+					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>6AD6ED14-3F3F-4433-AA26-C7096E9F5554.JPG</string>
+					<string>824DB919-9A6D-46C5-B45A-D7BD20F8A947.png</string>
+					<string>8FCCB529-6D0A-4EFD-8BC7-E98F04E1CFE8.png</string>
+					<string>72285872-E20D-40B5-B598-C381388669BD.png</string>
+					<string>3753C1ED-81C9-4B9B-BEB7-D5624ED4F8A8.jpg</string>
+					<string>097FB8F5-4B66-4248-B7DB-A000DE0398F9.tif</string>
+					<string>F03FA060-6CBB-48E5-BF43-D598CD938903.jpeg</string>
+					<string>456042FE-60F4-4921-A4EC-7DB7E6ADF61B.JPG</string>
+					<string>5BF30921-A671-4CDB-97A7-8BC0411EACE0.jpg</string>
+					<string>2D2C7882-4070-45FF-B2A2-E8EBA0776854.jpg</string>
+					<string>3A11B0C1-9DAE-44AC-B3BA-AC20129F6A6B.png</string>
+					<string>CA62E549-36E9-429D-813D-F52E22EE4E61.jpg</string>
+					<string>0D23015F-A18C-4669-8E4F-02FED6B490C4.jpeg</string>
+					<string>97610C34-CA0D-4A40-81E3-935A5198EB15.png</string>
+					<string>E803AE13-A4C7-4755-8A04-1C5A56B26D45.jpg</string>
+					<string>3D22F3F8-774D-48F3-BA8C-E01132B08199.jpeg</string>
+					<string>5D61BD56-6CDB-4CBB-B59E-06361F9E61E3.jpg</string>
+					<string>5259EB3C-8F9B-49B0-98B7-6F3619CEDC51.png</string>
+					<string>5788FCC3-5087-47E8-81B3-A2B2FECA0ABE.jpg</string>
+					<string>F2416E23-8774-41A8-9C6A-A0C94F645FEC.jpeg</string>
+					<string>FE232A91-069A-4911-B5C7-A83952494984.jpeg</string>
+					<string>0EA7C9B3-5BA7-4AA9-8173-A0053C3124AD.jpg</string>
+					<string>DDBD7F79-2153-4D98-B55D-FBC2B1CB73ED.jpeg</string>
+					<string>074DB506-DD6C-46B2-8A8A-B2CFD1CA4CF2.png</string>
+					<string>A9B228A4-BEE7-45F6-88F9-261598FA9098.jpeg</string>
+					<string>EAA153DC-0A6A-442E-BF56-2E068EFB541C.jpg</string>
+					<string>B7470981-AB76-4C45-98D2-C605358223F8.jpeg</string>
+					<string>5D84A60A-E58F-40A5-8017-0CA9EDC71DB3.png</string>
+					<string>636ED7CB-7626-4238-B88F-2D6E6E0CE773.jpg</string>
+					<string>DBF9EE94-2BBC-48F7-A4C1-65B3DBA8D3D4.jpg</string>
+					<string>D105C8B9-5C12-4D9A-B063-06A7AB5C0555.jpeg</string>
+					<string>9D1F9AE0-6816-4211-BB4C-3ED69B79CAFD.jpeg</string>
+					<string>AD1DD40F-D2AB-49B2-B02D-C7BDFA7D91C5.png</string>
+					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
+					<string>BA97414C-3F7F-4AA4-A7FE-819D687C71F8.jpg</string>
+					<string>893502BA-BCD3-480E-B6FC-2BAD8B7A0C4F.jpg</string>
+					<string>C69624CF-0442-44EB-A38D-1FE418C6CC31.jpg</string>
+					<string>FB2ED7F3-BD34-458F-9541-33A4A28F7DB6.png</string>
+					<string>564025D5-0062-4CCB-BEF7-4FB06B3FD766.jpg</string>
+					<string>0F3986A7-8A92-4B24-872F-EF0775EBF014.jpg</string>
+					<string>ECCD3F1A-3BF0-4C14-8E42-742AD3ED770A.jpg</string>
+					<string>2B2723F5-C4B3-42C6-BBD8-C7A7E9989A98.jpg</string>
+					<string>17E14FC6-211A-4C35-BEB1-36B9703E520C.jpg</string>
+					<string>89BB3204-CFF3-4411-A25C-4DFB8632E05D.jpeg</string>
+					<string>EB709EEC-D4EE-481D-AF8C-A379A29DD612.jpg</string>
+					<string>1EEF836A-66E9-4929-8E20-E273DF71BC6E.jpeg</string>
+					<string>ED0CB92F-FFF8-411E-97D1-AD86C92D334A.png</string>
+					<string>29EF119E-8645-49CC-84DB-4DCF2F02CEF1.png</string>
+					<string>E60A35D9-6F04-4DBF-8694-277C91A35AE7.JPG</string>
+					<string>4D8E34CF-B756-4351-A45C-19E462C4B2BB.png</string>
 					<string>921BAA7E-FDF7-4456-B843-2CED84DAF2D8.png</string>
-					<string>CF9893E3-59CD-4BE6-8702-0BD6471A502E.png</string>
-					<string>39B8ED38-E9A1-4DAB-B7B9-8B4B460879D4.png</string>
-					<string>A5D65C1F-EE68-411B-93B8-D153EA25F7E2.png</string>
-					<string>D75A030B-8188-4D24-BFC4-2F7ECDBC4129.png</string>
-					<string>FC8D0313-A44C-4AC6-8B38-60ADAB9726D7.png</string>
+					<string>A5988491-8ACF-4BDE-9385-42F00D75F820.png</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 23-01-23 #161910B61</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 23-01-27 #075201E25</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAAAAQAAAAIAAAADAAAABAAAAAUAAAAG
@@ -145,7 +175,7 @@
 				DEgAAAxJAAAMSgAADFMAAAxWAAAMWwAADGQAAAxnAAAM
 				agAADGsAAAxsAAAMbQAADG4AAAxvAAAMcAAADHEAAAx4
 				AAAMeQAADIIAAAyFAAAMhgAADI0AAAyVAAAMmAAADJkA
-				AAyaAAAMnwAADKAAAAyhAAAMpAAADKsAAAzjAAAM5gAA
+				AAyaAAAMnQAADKIAAAyjAAAMpAAADKsAAAzjAAAM5gAA
 				DOcAAAzoAAAM7QAADPAAAAz3AAAM/QAADQAAAA0HAAAN
 				DgAADRUAAA0cAAANIAAADSMAAA0kAAANXAAADV8AAA1g
 				AAANYQAADWYAAA1pAAANcAAADXYAAA15AAANgAAADYcA
@@ -2229,12 +2259,12 @@
 				ArUAAAusAAALrQAAAT0AAAuvAAAAOwAAC7EAAAuyAAAL
 				swAAC7QAAAu1AAALtgAAC7cAAAA5AAALuQAAADsAAAu7
 				AAALvAAAADkAAAA5AAAAOQAAC8AAAAvBAAALwgAAADsA
-				AAA5AAAAOQAAC8YAAAvHAAAAOwAAAFoAAAA5AAAAOQAA
-				C8wAAAvNAAAAOYECX4ECYIAGgQJhgQJtgAWBAm+BAnCA
+				AAA5AAAAOQAAC8YAAAvHAAAAOwAAADkAAABaAAAAOQAA
+				ADkAAAvNAAALzoECX4ECYIAGgQJhgQJtgAWBAm+BAnCA
 				BYAFgPGAC4ECcoC2gAWBAnOABoAGgNKBAnSBAnaALoEC
 				d4AFgQJ6gQJ9gQJ+gQJ/gQKAgQKBgQKCgAaBAoOABYEC
 				hIEChoAGgAaABoECiIECiYECi4AFgAaABoECjIECjYAF
-				gAmABoAGgQKOgQKRgAaAF1htZW51Rm9udFVzdHlsZVtm
+				gAaACYAGgAaBAo6BAo+AF1htZW51Rm9udFVzdHlsZVtm
 				aXhlZFNoYWRvd1poYWxmSGVpZ2h0WWxvZ29TbWFsbF8Q
 				D2hpZGVUaXRsZU1vYmlsZVVhbGlnbllsb2dvTGFyZ2Va
 				c2hvd1BhcmVudFhzaG93TG9nb1h0aXRsZVRhZ1huYXZJ
@@ -2249,9 +2279,9 @@
 				aWNreUhpZGVfEBBicmVha3BvaW50Q3VzdG9tWmxvZ29N
 				ZWRpdW1ZdGV4dENvbG9yXWZ1bGxXaWR0aE1lbnVXY29u
 				dGFpblxjdXN0b21TaXppbmdaYnJlYWtwb2ludFZzbG9n
-				YW5fEBBoaWRlU2xvZ2FuTW9iaWxlW2ZpeGVkT2Zmc2V0
-				W3pvbmVEaXZpZGVyXxAQc3VibWVudUluZGljYXRvclhm
-				b250U2l6ZV8QD2NvbGxhcHNlSGVhZGluZ18QEGZvbnQt
+				YW5fEBBoaWRlU2xvZ2FuTW9iaWxlXxAPY29sbGFwc2VI
+				ZWFkaW5nW2ZpeGVkT2Zmc2V0W3pvbmVEaXZpZGVyXxAQ
+				c3VibWVudUluZGljYXRvclhmb250U2l6ZV8QEGZvbnQt
 				ZmFtaWx5LXRleHRVc29saWTTAAAAsQAAAHcAAAAsAAAM
 				CAAADA8AAAC0pgAADAkAAAwKAAAMCwAADAwAAAwNAAAM
 				DoECYoECY4ECZIECZYECZoECZ6YAAAwQAAAMEQAAADsA
@@ -2292,10 +2322,10 @@
 				kQAAALSiAAADqgAAA6uA0IDRogAAArUAAAK1gNKA0oAX
 				0wAAAIAAAACBAAAALAAADJYAAAB1AAAAg08QJzAuMzQ1
 				MDk4MDM5MiAwLjM0NTA5ODAzOTIgMC4zNDkwMTk2MDc4
-				AIAPWDYyLjU2M2VtVlNsb2dhbtIAAAB3AAAALAAADJsA
-				AADAogAADJwAAAydgQKPgQKQgCkjP+oAAAAAAAAjP/EA
-				AAAAAADTAAAAgAAAAIEAAAAsAAAMogAAAHUAAACDSjAg
-				MCAwIDAuNACAD9IAAAB3AAAALAAADKUAAADApAAADKYA
+				AIAPWDYyLjU2M2VtVlNsb2dhbtMAAACAAAAAgQAAACwA
+				AAybAAAAdQAAAINKMCAwIDAgMC40AIAP0gAAAHcAAAAs
+				AAAMngAAAMCiAAAMnwAADKCBApCBApGAKSM/6gAAAAAA
+				ACM/8QAAAAAAANIAAAB3AAAALAAADKUAAADApAAADKYA
 				AAynAAAMqAAADKmBApOBAqOBArOBAsOAKd8QNwAABYEA
 				AAARAAAAKgAABYIAAAAuAAAAIAAAACkAAAAwAAAFgwAA
 				ACEAAAWEAAAAEAAAACgAAAAzAAAFhQAAABMAAAAeAAAA
@@ -19565,10 +19595,10 @@
 				WgAAAFoAAABagAmACYAJgAmADdMAAACxAAAAdwAAACwA
 				AObAAADm2gAAALSvEBkAAObBAAAQ6AAAAlQAABrOAAAD
 				qgAA5sYAAObHAADmyAAA5skAAObKAADmywAA5swAAObN
-				AADmzgAA5s8AAObQAADm0QAAC5UAAObTAADm1AAA5tUA
+				AADmzgAA5s8AAObQAADm0QAAC5cAAObTAADm1AAA5tUA
 				AObWAADm1wAA5tgAAObZgSHsgQMygHGBBNmA0IEh7YEh
 				7oEh74Eh8IEh8YEh8oEh84Eh9IEh9YEh9oEh94Eh+IEC
-				XYEh+YEh+oEh+4Eh/IEh/YEh/oEh/68QGQAA5tsAAObc
+				XoEh+YEh+oEh+4Eh/IEh/YEh/oEh/68QGQAA5tsAAObc
 				AADm3QAAADkAAAA7AADm4AAAArUAAAK1AADm4wAA5uQA
 				AOblAAAAOQAA5ucAAOboAAAAOQAAADkAAObrAADm7AAA
 				ADkAAObuAAAQ+gAAC8AAAMxnAAACtwAA5vOBIgCBIgKB
@@ -19667,9 +19697,9 @@
 				WgAAAFqACYAJgAmACYAN0wAAALEAAAB3AAAALAAA6C4A
 				AOhIAAAAtK8QGQAA6C8AABDoAAACVAAAGs4AAAOqAADm
 				xgAA5scAAOg2AADoNwAA6DgAAOg5AADmzAAA6DsAAObO
-				AADoPQAA5tAAAObRAAALlQAA5tMAAOhCAADm1QAA6EQA
+				AADoPQAA5tAAAObRAAALlwAA5tMAAOhCAADm1QAA6EQA
 				AOhFAADoRgAA5tmBIjGBAzKAcYEE2YDQgSHtgSHugSIy
-				gSIzgSI0gSI1gSHzgSI2gSH1gSI3gSH3gSH4gQJdgSH5
+				gSIzgSI0gSI1gSHzgSI2gSH1gSI3gSH3gSH4gQJegSH5
 				gSI4gSH7gSI5gSI6gSI7gSH/rxAZAADoSQAA6EoAAOhL
 				AAAAOQAAADsAAObgAAACtQAAArUAAObjAADoUgAA5uUA
 				AAA5AADm5wAA5ugAAAA5AAAAOQAA5usAAObsAAAAOQAA
@@ -19766,9 +19796,9 @@
 				gAmADdMAAACxAAAAdwAAACwAAOmLAADppQAAALSvEBkA
 				AOmMAAAQ6AAAAlQAABrOAAADqgAA5sYAAObHAADpkwAA
 				6ZQAAOmVAADplgAA5swAAOmYAADmzgAA6ZoAAObQAADm
-				0QAAC5UAAObTAADpnwAA5tUAAOmhAADpogAA6aMAAObZ
+				0QAAC5cAAObTAADpnwAA5tUAAOmhAADpogAA6aMAAObZ
 				gSJngQMygHGBBNmA0IEh7YEh7oEiaIEiaYEiaoEia4Eh
-				84EibIEh9YEibYEh94Eh+IECXYEh+YEiboEh+4Eib4Ei
+				84EibIEh9YEibYEh94Eh+IECXoEh+YEiboEh+4Eib4Ei
 				cIEicYEh/68QGQAA6aYAAOmnAADpqAAAADkAAAA7AADm
 				4AAAArUAAAK1AADm4wAA6a8AAOblAAAAOQAA5ucAAObo
 				AAAAOQAAADkAAObrAADptwAAADkAAOm5AAAQ+gAAC8AA
@@ -19863,9 +19893,9 @@
 				AFoAAABagAmACYAJgAmADdMAAACxAAAAdwAAACwAAOro
 				AADrAgAAALSvEBkAAObBAAAQ6AAAAlQAABrOAAADqgAA
 				5sYAAObHAADmyAAA5skAAObKAADmywAA5swAAObNAADm
-				zgAA5s8AAObQAADm0QAAC5UAAObTAADm1AAA5tUAAObW
+				zgAA5s8AAObQAADm0QAAC5cAAObTAADm1AAA5tUAAObW
 				AADm1wAA5tgAAObZgSHsgQMygHGBBNmA0IEh7YEh7oEh
-				74Eh8IEh8YEh8oEh84Eh9IEh9YEh9oEh94Eh+IECXYEh
+				74Eh8IEh8YEh8oEh84Eh9IEh9YEh9oEh94Eh+IECXoEh
 				+YEh+oEh+4Eh/IEh/YEh/oEh/68QGQAA6wMAAOsEAADr
 				BQAAADkAAAA7AADm4AAAArUAAAK1AADm4wAA6wwAAObl
 				AAAAOQAA5ucAAOboAAAAOQAAADkAAObrAADptwAAADkA
@@ -22139,14 +22169,14 @@
 				AAEX1wABF9kAARfcAAEX3gABF+EAARfkAAEX5wABF+oA
 				ARftAAEX8AABF/MAARf1AAEX+AABF/oAARf9AAEYAAAB
 				GAIAARgEAAEYBgABGAkAARgMAAEYDwABGBEAARgTAAEY
-				FQABGBgAARgbAAEYHQABGB8AARghAAEYIwABGCYAARgp
+				FQABGBgAARgbAAEYHQABGB8AARghAAEYIwABGCUAARgo
 				AAEYKwABGC0AARg2AAEYPAABGEgAARhTAAEYXQABGG8A
 				ARh1AAEYfwABGIoAARiTAAEYnAABGKUAARiqAAEYswAB
 				GMAAARjGAAEY0QABGNkAARjeAAEY5gABGOsAARj2AAEZ
 				AQABGQkAARkTAAEZJQABGTEAARk7AAEZRQABGUsAARlZ
 				AAEZZAABGW4AARl4AAEZfwABGYsAARmXAAEZpgABGbEA
 				ARnEAAEZzwABGdkAARnnAAEZ7wABGfwAARoHAAEaDgAB
-				GiEAARotAAEaOQABGkwAARpVAAEaZwABGnoAARqAAAEa
+				GiEAARozAAEaPwABGksAARpeAAEaZwABGnoAARqAAAEa
 				mQABGrIAARq1AAEauAABGrsAARq+AAEawQABGsQAARrd
 				AAEa4AABGuMAARrlAAEa6AABGusAARruAAEa8AABGvUA
 				ARr4AAEa/gABGwMAARsMAAEbEQABGxsAARsmAAEbKAAB
@@ -22164,8 +22194,8 @@
 				AR6cAAEengABHqAAAR6iAAEepAABHqYAAR6oAAEewQAB
 				HtYAAR7YAAEe2wABHxQAAR8WAAEfGAABHxkAAR8cAAEf
 				HgABHyAAAR85AAEfQgABH0QAAR9GAAEfTwABH1EAAR9T
-				AAEfVQABH24AAR+YAAEfmgABH6MAAR+qAAEfuwABH8QA
-				AR/HAAEfygABH8wAAR/VAAEf3gABH/cAASACAAEgBAAB
+				AAEfVQABH24AAR+YAAEfmgABH6MAAR+qAAEfwwABH84A
+				AR/QAAEf4QABH+oAAR/tAAEf8AABH/IAAR/7AAEgBAAB
 				IBUAASAmAAEgKQABICwAASAvAAEgMgABIDQAASHvAAEh
 				8AABIfIAASH1AAEh+AABIfoAASH9AAEh/wABIgEAASIC
 				AAEiBQABIggAASIKAAEiDAABIg4AASIRAAEiEwABIhUA
