add new logo to Postdoc page
add new logo to Postdoc page

--- a/vermontcomplexsystems-foundation.rw8/Pages/13-Archive/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/13-Archive/Data/Contents.plist
@@ -13,38 +13,38 @@
 				<string>6300</string>
 				<key>markedImages</key>
 				<array>
-					<string>AF23A873-73A6-4D54-894A-27F9FD3AEB25.png</string>
+					<string>A94EBEF8-1783-4B0C-9003-5166E929FCDC.png</string>
 					<string>9AA3771A-78A4-45EB-A734-5FF21DDB25D6.png</string>
-					<string>E66D9F84-958D-47C8-80C5-C55DE87FACC1.png</string>
-					<string>96B08F61-C24C-434A-81E3-2DFDD980E069.png</string>
-					<string>39E02609-BC61-437B-A3C6-404747999017.png</string>
-					<string>46F15C95-6A0D-4163-A286-9BB53345B0C0.png</string>
-					<string>2BE540C4-5699-4470-BD25-B20DCED933F2.JPG</string>
-					<string>3AFAF35B-027C-48C0-8CC7-E9A3FFB15D31.jpg</string>
+					<string>7C69DC17-D444-47D5-B00E-DD4A7CE6C458.jpeg</string>
+					<string>53F1B7CC-01DE-422F-9025-A9C9F44EC073.jpg</string>
+					<string>D7CA5354-0A44-4585-9CAF-71650D0C4199.jpeg</string>
 					<string>0AC27926-FA8A-4665-BF6C-CDB56F95F52B.png</string>
-					<string>81BC8AB8-EB31-4900-859B-FB0D550D3F54.png</string>
+					<string>5C05F835-91E9-4FE7-B031-5FA2EE65D7D7.png</string>
 					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
+					<string>E24AA98D-BE58-4858-9805-12F297C6489D.jpg</string>
 					<string>D77F5D58-9A12-4454-A5B9-293ECD432652.png</string>
 					<string>E97F2417-BD68-448C-91B7-0BE97DC867F8.png</string>
+					<string>6E6FA2C8-7E77-4FAA-AA9E-A42F18460CED.jpg</string>
 					<string>DC554570-0A89-411C-A771-383841BD19A2.png</string>
-					<string>EC09AEFD-BEB7-4309-97B1-49F5DFB31BB2.png</string>
 					<string>097FB8F5-4B66-4248-B7DB-A000DE0398F9.tif</string>
 					<string>D2D5121E-4C53-46A8-A306-23C8B6E642E7.png</string>
-					<string>0E55175B-B627-4887-940B-F437CFFA496C.png</string>
-					<string>EFEB858B-9F46-469B-B302-A250EA3F9BD9.jpg</string>
-					<string>78F07974-DF7D-434A-B6CC-481F363B007A.png</string>
-					<string>2474C621-9841-4E4E-A2D9-81A99BF5F7DF.png</string>
-					<string>8F58942D-710E-4445-9502-D76FEC53BC62.png</string>
+					<string>E2604B8F-570F-4443-99F6-D896AE8F69B5.jpg</string>
+					<string>119AD197-CA01-47C8-9F9B-A4A2E2FD19C7.jpg</string>
+					<string>D8A4F643-68AC-4496-A6A9-8AB25C768F53.jpg</string>
+					<string>724C1E78-39FC-41BA-ABA0-688A088A6309.png</string>
+					<string>9D997113-670C-4952-B79C-16FA68733569.jpg</string>
+					<string>3AC0BD7B-21B7-4D32-93F5-E375763462BA.jpg</string>
+					<string>F4DC323C-90B9-4A1C-B5ED-0C0289F40D7C.jpg</string>
 					<string>921BAA7E-FDF7-4456-B843-2CED84DAF2D8.png</string>
-					<string>250DFD16-BBD9-484E-9525-83B518D3F042.jpg</string>
-					<string>3BFBA12B-4DE2-4E92-A7FD-46F6D3B4B9C1.jpg</string>
-					<string>D515F7C1-02B6-48A6-8995-B2AB9F271E5A.png</string>
+					<string>AF23A873-73A6-4D54-894A-27F9FD3AEB25.png</string>
+					<string>7B066F52-80F1-4229-B6DF-76D9CBD70258.png</string>
 					<string>32EA8357-468A-4E2B-AC87-75819DD96CEA.png</string>
-					<string>42EEB36D-EA50-4068-914F-EBFEFC29D368.png</string>
-					<string>653C5DBA-7736-463E-A18A-342702B339B8.png</string>
+					<string>0E5AFCB7-7CC2-47CE-A1F7-2B15E8D67609.jpg</string>
+					<string>803AA9AB-E72E-4871-B669-5D50DBADCF2C.jpg</string>
+					<string>1EF8C853-D286-4833-A3B7-792346CA9FD2.jpg</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 23-02-08 #095455E93</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 23-02-16 #053206A7A</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
