--- a/vermontcomplexsystems-foundation.rw8/Resources/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Resources/Contents.plist
@@ -85,6 +85,7 @@
 				<string>71995361-B1EC-43C6-9652-03974FC023A4</string>
 				<string>7331843A-72D0-438E-A429-F0E6943004F5</string>
 				<string>7463D8BA-C6BC-40E8-8AE9-68F4A060688B</string>
+				<string>7522F5E4-0262-4A3B-AFA5-0B5DA03F8418</string>
 				<string>77538653-5DE3-49FF-A4F3-1BDEE92B2901</string>
 				<string>787AC5FE-DA87-4491-9C86-46BC5E278643</string>
 				<string>7890E4FA-F8DA-463E-841C-6B277EFA3011</string>
@@ -97,6 +98,7 @@
 				<string>82D723F6-016C-4ADD-B50D-B2EF1674382B</string>
 				<string>82E904D8-E9A0-4FF7-9CCD-679252CD92B8</string>
 				<string>861B7917-DEA7-43A0-9424-A57598E8F7F8</string>
+				<string>89C417A2-2D2B-436E-9523-120C2FA31188</string>
 				<string>8BD4D02F-6F9A-4C20-99F0-8B02A34E26BF</string>
 				<string>8C6758B3-5808-48C2-9ADF-CAB45410C512</string>
 				<string>8D81DA3A-64C2-4470-A9C4-BA6E099C105D</string>
