--- a/vermontcomplexsystems-foundation.rw8/Pages/10-People/ChildPages/3-Postdocs/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/10-People/ChildPages/3-Postdocs/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-12-09T15:34:55Z</date>
+						<date>2023-02-16T10:52:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -90,6 +90,16 @@
 								<key>Size</key>
 								<integer>21987</integer>
 							</dict>
+							<key>files/small-110746.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OAFREfOgCFVX
+								ZEK41eA/LA==
+								</data>
+								<key>Size</key>
+								<integer>227556</integer>
+							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
 								<key>Digest</key>
@@ -109,6 +119,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68409</integer>
+							</dict>
+							<key>files/stacks-image-119ad19.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7rju3JziiP6B
+								IHdyGl+BoA==
+								</data>
+								<key>Size</key>
+								<integer>62917</integer>
+							</dict>
+							<key>files/stacks-image-1ef8c85.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ekHqkQgK3SaP
+								4bgbZ/s5Ig==
+								</data>
+								<key>Size</key>
+								<integer>28626</integer>
 							</dict>
 							<key>files/stacks-image-53f1b7c.jpg</key>
 							<dict>
@@ -130,6 +160,26 @@
 								<key>Size</key>
 								<integer>25302</integer>
 							</dict>
+							<key>files/stacks-image-724c1e7-1200x1140.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								H4sYoIQW4JaK
+								2DfEUAJObA==
+								</data>
+								<key>Size</key>
+								<integer>314939</integer>
+							</dict>
+							<key>files/stacks-image-724c1e7-1200x1140@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								tGhAr1+LVFBi
+								Jkhc0oUsrA==
+								</data>
+								<key>Size</key>
+								<integer>990345</integer>
+							</dict>
 							<key>files/stacks-image-7c69dc1-300x304.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -139,6 +189,16 @@
 								</data>
 								<key>Size</key>
 								<integer>26850</integer>
+							</dict>
+							<key>files/stacks-image-803aa9a.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								bJJbX4mhEo62
+								ikonWqEsHA==
+								</data>
+								<key>Size</key>
+								<integer>60163</integer>
 							</dict>
 							<key>files/stacks-image-9d99711.jpg</key>
 							<dict>
@@ -200,15 +260,25 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page45.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								zkE2bWVS7JHk
-								cbq31VhPAA==
+								92iFu2Rj/2fr
+								O7tGXtqJxg==
 								</data>
 								<key>Size</key>
-								<integer>129352</integer>
+								<integer>127458</integer>
 							</dict>
 							<key>files/stacks_page_page45.js</key>
 							<dict>
@@ -224,11 +294,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QU6dKHbAgE+y
-								nP4rGIXHpw==
+								FeOcMZpFfmFo
+								2e6vBV11qA==
 								</data>
 								<key>Size</key>
-								<integer>72125</integer>
+								<integer>71750</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
