--- a/vermontcomplexsystems-foundation.rw8/Pages/07-Events-0026-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/07-Events-0026-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-03-13T14:39:20Z</date>
+						<date>2023-04-10T18:45:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1134,18 +1134,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pKg4GoAGUsbE
-								aDaZzs44Lw==
+								KvbEFeUynb4G
+								93N1O9E9Bw==
 								</data>
 								<key>Size</key>
-								<integer>550163</integer>
+								<integer>549071</integer>
 							</dict>
 							<key>files/stacks_page_page91.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								gV/rlnlQlUFD
-								5ZeqBlPCiw==
+								lLMQA1VOvcJa
+								0cnNhyW+4Q==
 								</data>
 								<key>Size</key>
 								<integer>29785</integer>
@@ -1154,11 +1154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+L/JVZKbjIu0
-								JTc/mPGVOA==
+								Gf7D0xLtCQmf
+								Y0/jSKNsaw==
 								</data>
 								<key>Size</key>
-								<integer>376499</integer>
+								<integer>375321</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
