--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-02-28T21:40:41Z</date>
+						<date>2023-04-10T18:55:19Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -340,6 +340,16 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page7.css</key>
 							<dict>
 								<key>Digest</key>
@@ -364,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3CaHvfdlVQ3F
-								2TsOXX1Y2A==
+								NDuHlGxsnmYS
+								pigbsgHitA==
 								</data>
 								<key>Size</key>
-								<integer>128988</integer>
+								<integer>128810</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
