update PhD page
update links to catch-up courses on PhD page

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-04-10T18:55:19Z</date>
+						<date>2023-04-11T15:18:00Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NDuHlGxsnmYS
-								pigbsgHitA==
+								TgSuAx1d8x/3
+								/mxHtlTztQ==
 								</data>
 								<key>Size</key>
-								<integer>128810</integer>
+								<integer>128970</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
