--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-04-10T18:55:19Z</date>
+						<date>2023-04-15T00:59:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -364,11 +364,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4KBA2O3w0Pno
-								6o0gPv5KqQ==
+								t8Gena9BFdrX
+								bIb9PfBImQ==
 								</data>
 								<key>Size</key>
-								<integer>129688</integer>
+								<integer>129711</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
