update Masters and PhD pages
update '3 of 6: Travelers of All Paths' section of Masters and PhD pages

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-04-15T00:59:58Z</date>
+						<date>2023-04-17T21:17:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tbernDQ34LwU
-								1MC4NxHQhg==
+								74CTkohh+v33
+								MR/ghbRJGA==
 								</data>
 								<key>Size</key>
-								<integer>128993</integer>
+								<integer>129447</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
