--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-04-15T00:59:58Z</date>
+						<date>2023-04-17T21:17:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -320,6 +320,16 @@
 								<key>Size</key>
 								<integer>68409</integer>
 							</dict>
+							<key>files/stacks-image-c9bb3b6.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								/tqoCjkTOMw2
+								hUzDnE1bOQ==
+								</data>
+								<key>Size</key>
+								<integer>24860</integer>
+							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
@@ -344,11 +354,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kWFGmSpsgD3m
-								5ptv50z/NA==
+								hYBA+i663J21
+								DPQoYoIsSw==
 								</data>
 								<key>Size</key>
-								<integer>210973</integer>
+								<integer>210519</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -364,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								t8Gena9BFdrX
-								bIb9PfBImQ==
+								jGfcBo1x6BG+
+								8c7r8jj9mA==
 								</data>
 								<key>Size</key>
-								<integer>129711</integer>
+								<integer>129694</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
