update Certificate, Research/Research Groups, and Masters/PhD pages
add prereqs and curriculum sections to Certificate page. update Group Leads and website links for Computational Ethics group on Research/Research Groups pages. add CSYS cross-listing for Optimization in Engineering course on Masters and PhD pages

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-02-28T21:40:41Z</date>
+						<date>2023-05-04T15:14:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -174,11 +174,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								e7/baBHgClfT
-								WN+w33H7pQ==
+								UkvBuj5D5ikR
+								7rK63JuO3A==
 								</data>
 								<key>Size</key>
-								<integer>95945</integer>
+								<integer>113719</integer>
 							</dict>
 							<key>files/stacks_page_page47.js</key>
 							<dict>
@@ -194,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sruKwUv6J7N1
-								qoaE0ztnzA==
+								khiPQuKB2wO6
+								ojb6xNn0uw==
 								</data>
 								<key>Size</key>
-								<integer>43488</integer>
+								<integer>55956</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
