--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Research/ChildPages/01-Research-Groups/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Research/ChildPages/01-Research-Groups/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-03-20T16:14:49Z</date>
+						<date>2023-05-04T15:14:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -120,16 +120,6 @@
 								<key>Size</key>
 								<integer>30576</integer>
 							</dict>
-							<key>files/small-525410.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								uMd4+vmj17Hm
-								7vaQdq1Hpg==
-								</data>
-								<key>Size</key>
-								<integer>348385</integer>
-							</dict>
 							<key>files/small-525425.png</key>
 							<dict>
 								<key>Digest</key>
@@ -159,16 +149,6 @@
 								</data>
 								<key>Size</key>
 								<integer>48323</integer>
-							</dict>
-							<key>files/small-525766.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								uMd4+vmj17Hm
-								7vaQdq1Hpg==
-								</data>
-								<key>Size</key>
-								<integer>348385</integer>
 							</dict>
 							<key>files/small-525781.png</key>
 							<dict>
@@ -250,16 +230,6 @@
 								<key>Size</key>
 								<integer>120338</integer>
 							</dict>
-							<key>files/stacks.css</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								50GRTTbiED16
-								GoEnKyM7jQ==
-								</data>
-								<key>Size</key>
-								<integer>1325</integer>
-							</dict>
 							<key>files/stacks_page_page17.css</key>
 							<dict>
 								<key>Digest</key>
@@ -284,11 +254,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hRv4coJfr2pa
-								2aWpI1/ijA==
+								sq5SUqOqqTtt
+								PB9H3Am68Q==
 								</data>
 								<key>Size</key>
-								<integer>88328</integer>
+								<integer>88354</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
