--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Research/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Research/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-03-20T16:14:49Z</date>
+						<date>2023-05-04T15:14:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -230,16 +230,6 @@
 								<key>Size</key>
 								<integer>120338</integer>
 							</dict>
-							<key>files/stacks.css</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								50GRTTbiED16
-								GoEnKyM7jQ==
-								</data>
-								<key>Size</key>
-								<integer>1325</integer>
-							</dict>
 							<key>files/stacks_page_page22.css</key>
 							<dict>
 								<key>Digest</key>
@@ -264,11 +254,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PMDQp2/ofoJL
-								0HPuu02TWA==
+								vTgi/PyUcTvR
+								ngTYc/6PLQ==
 								</data>
 								<key>Size</key>
-								<integer>88071</integer>
+								<integer>88100</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
