update Masters, PhD, and Certificate pages
update "Win Condition A" wording on Masters page; add PBIO elective courses to Masters, PhD, and Certificate pages

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-05-04T15:14:02Z</date>
+						<date>2023-05-05T15:35:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -340,6 +340,16 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page7.css</key>
 							<dict>
 								<key>Digest</key>
@@ -364,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dqCwY4bO1bLg
-								UW2R1vg63w==
+								gyrQ8+Id+pFh
+								SoHKrokZDA==
 								</data>
 								<key>Size</key>
-								<integer>129452</integer>
+								<integer>129591</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
