--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-05-04T15:14:03Z</date>
+						<date>2023-05-05T15:31:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -170,6 +170,16 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page47.css</key>
 							<dict>
 								<key>Digest</key>
@@ -194,11 +204,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								khiPQuKB2wO6
-								ojb6xNn0uw==
+								ApZKTstKOwoV
+								ki0e0rmYOw==
 								</data>
 								<key>Size</key>
-								<integer>55956</integer>
+								<integer>56096</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
