--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-05-04T15:14:02Z</date>
+						<date>2023-05-05T15:35:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -330,6 +330,16 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page0.css</key>
 							<dict>
 								<key>Digest</key>
@@ -354,11 +364,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9B5rix74MP7p
-								j8WOHdrimA==
+								n4ysdJR82vH6
+								q+r5u0KE5g==
 								</data>
 								<key>Size</key>
-								<integer>129699</integer>
+								<integer>129853</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
